[package]
name = "Rust_Payment_System"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "Rust_Payment_System"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.16.10"

[dev-dependencies]
solana-sdk = "1.16.3"
